tests/snapshots/generated_from_inputs__good_integer_max.snap
---
source: tests/fixtures.rs
description: "int main() {\n    printInt(2147483647);\n    return 0;\n}\n"
input_file: inputs/good/integer_max.lat
---
; ModuleID = 'integer_max'
source_filename = "integer_max"

%string = type { i8*, i32 }

declare void @printInt(i32)

declare void @printString(%string*)

declare void @error()

declare i32 @readInt()

declare %string* @readString()

declare %string* @newString(i8*, i32)

declare %string* @stringConcat(%string*, %string*)

declare i32 @stringEqual(%string*, %string*)

define i32 @main() {
b0:
  call void @printInt(i32 2147483647)
  ret i32 0
}

