tests/snapshots/generated_from_inputs__good_string_dynamic_equality.snap
---
source: tests/fixtures.rs
description: "int main() {\n    string a = readString();\n    string b = readString();\n    if (a == b)\n        return 0;\n    return 1;\n}\n"
input_file: inputs/good/string_dynamic_equality.lat
---
; ModuleID = 'string_dynamic_equality'
source_filename = "string_dynamic_equality"

%string = type { i8*, i32 }

declare void @printInt(i32)

declare void @printString(%string*)

declare void @error()

declare i32 @readInt()

declare %string* @readString()

declare %string* @newString(i8*, i32)

declare %string* @stringConcat(%string*, %string*)

declare i32 @stringEqual(%string*, %string*)

define i32 @main() {
b0:
  %readString = call %string* @readString()
  %readString1 = call %string* @readString()
  %strings_equal = call i32 @stringEqual(%string* %readString, %string* %readString1)
  %v2 = icmp ne i32 %strings_equal, 0
  br i1 %v2, label %b1, label %b2

b2:                                               ; preds = %b0
  ret i32 1

b1:                                               ; preds = %b0
  ret i32 0
}

